chore: add new dependencies and update tsconfig.json

--- a/package.json
+++ b/package.json
@@ -4,15 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "ts-node-dev src/app.ts",
     "build": "tsc",
-    "dev": "ts-node-dev src/app.ts"
+    "start": "node dist/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@langchain/community": "^0.3.43",
+    "@langchain/core": "^0.3.56",
+    "@langchain/openai": "^0.5.10",
+    "chromadb": "^2.4.6",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "langchain": "^0.3.26",
+    "openai": "^4.100.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.18",
